# phisat2

./: .gitignore  Makefile  README.md  pyproject.toml  runner.sh
.github/workflows/: pages.yml
configs/: config.yaml  lulc_50_shot.mk
docs/: index.html  styles.css
docs/adaptation/: legacy-workflows.html
docs/cli/: commands.html
docs/contributing/: index.html
docs/evaluation/: inference.html
docs/getting-started/: quickstart.html
docs/model/: architecture.html  task-mapping.html
docs/ops/: checkpoints-logs.html  resource-notes.html
docs/reproducibility/: index.html
docs/training/: hyperparameters.html  pipeline.html
docs/troubleshooting/: index.html
info/: model_encoder_decoder_sizes.csv
notebooks/: load_models.ipynb  optimal_transport.ipynb
phisat2/: __init__.py
phisat2/cli/: train.py
phisat2/data_loaders/: __init__.py  h5_pairs.py  registry.py  synthetic.py  transforms.py  zarr_downstream.py
phisat2/models/: __init__.py  blocks.py  composite.py  heads.py  registry.py
phisat2/tasks/: __init__.py  specs.py
phisat2/training/: lightning_module.py
phisat2/utils/: seed.py
scripts/: mount_data.sh  runner_template.pbs
scripts/classification/: build_sample_histograms.py  stratify_samples.py
scripts/segmentation/: README.md  build_sample_histograms.py  stratify_samples.py
splits/fire/: fire_train_sample_hist.csv  fire_train_sample_hist_50_global.csv  fire_train_sample_hist_50_global.json
splits/lulc/: lulc_train_5000_global.csv  lulc_train_5000_global.json  lulc_train_50_global.csv  lulc_train_50_global.json  lulc_train_50_global.selected.csv  lulc_train_50_global.summary.csv  lulc_train_50_global.summary.json  lulc_train_50_sample_hist.csv  lulc_train_50_sample_hist.metadata.json  lulc_train_sample_hist.metadata.json
src/: utils.py
src/adaptation/: train_distillation_student.py  train_distillation_teacher.py  train_downstream.py
src/core/: evaluation.py  utils.py
src/dataset/: dataset.py  dataset_downstreams.py  utils.py
src/downstreams/: train_downstream.py  (+1 more)
tests/: test_cli.py  test_lightning_module.py  test_models.py  test_registries.py  test_zarr_downstream.py
(+41 files in other folders)
