[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phisat2_project"
version = "0.1.0"
description = "PhiSat2 Foundation Models"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[hf-xet]>=1.16.1",
    "h5py",
    "jupyter",
    "lightning",
    "matplotlib",
    "pandas",
    "pyyaml",
    "scipy",
    "seaborn",
    "terratorch>=1.2.7",
    "torch",
    "torchmetrics",
    "torchvision",
    "tqdm",
    "wandb",
    "zarr",
]

[project.scripts]
phisat2-train = "phisat2.cli.train:main"

[tool.setuptools.packages.find]
include = ["phisat2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true